add setting controller around

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+  <h1>ワードウルフ for L</h1>
+  <p><%= link_to("はじめる", "/../setting/people")%></p>
+  <p><%= link_to("遊び方", "/about")%></p>
+  <p><%= link_to("プライバシーポリシー", "/privacypolicy")%></p>
+
     <%= yield %>
   </body>
 </html>
