add gamecontroller around

--- a/app/views/game/talk.html.erb
+++ b/app/views/game/talk.html.erb
@@ -6,10 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ゲーム設定</h1>
-
-<p>people.htmlで入力したプレイヤー名を他の場所でも使いたい</p>
-<p><%= link_to("ゲームスタート", "/../game/word")%></p>
+    <h1>トーク</h1>
+<p>TIME</p>
+<p>-</p><p>+</p>
+<button>一時停止</button>
+<button>スタート</button>
+<button><%= link_to("終了", "./vote")%></button>
 
 </body>
 </html>
